--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #000000;
 }
 
 .main {
@@ -33,8 +34,8 @@
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
+.title {
+  color: #ffffff;
   text-decoration: none;
 }
 
@@ -61,7 +62,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: #000000;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
